Fix inputWrapper content overflow

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -18,14 +18,14 @@ body
   align-items: center
   flex-direction: column
   grid-template-columns: 1fr
-  grid-template-rows: 1fr 100px
+  grid-template-rows: 1fr auto
+  // grid-auto-rows: min-content
 
 .inputWrapper
-  height: 100%
+  height: fit-content
   display: flex
   flex-wrap: wrap
   align-items: center
-  margin: auto
   &>*
     margin: 0 10px
 
